eleventy config filter undone

--- a/src/tag_pages.njk
+++ b/src/tag_pages.njk
@@ -8,7 +8,7 @@ pagination:
 permalink: /tags/{{ tag }}/
 layout: 'base.njk'
 eleventyComputed:
-  title: "{{ tag | toUpper }}"
+  title: "{{ tag }}"
 ---
 <h1>{{ tag }}</h1>
 
