added sass to project and redid styling with sass

--- a/src/index.njk
+++ b/src/index.njk
@@ -18,7 +18,7 @@ eleventyExcludeFromCollections: true
     {% for post in collections.oppskrifter %}
         <a class="recipe" href="{{ post.url }}">
         <img src="{{ post.data.img }}" alt="">
-        <p>{{post.data.title}}</p>
+        <p class="grid center">{{post.data.title}}</p>
         </a>
     {% endfor %}
 </div>
