--- a/src/index.njk
+++ b/src/index.njk
@@ -8,7 +8,7 @@ eleventyExcludeFromCollections: true
 
 <img src="/assets/images/coverpage.webp" alt="Kjøkkenbord med mat og pynt">
 
-<div class="tags">
+<div class="tags-list">
 <section>
   {% include 'tags.njk' %}
 </section>
