--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -12,7 +12,6 @@ header ul {
   background-color: #dddddd;
   position: relative;
   min-height: 4.5em;
-  font-size: 0.8em;
   margin: 0px;
   display: grid;
 }
@@ -32,7 +31,7 @@ header ul {
   height: 4.5em;
 }
 .recipe__tags__list {
-  font-size: 0.8rem;
+  font-size: 0.9rem;
 }
 .recipe__tags__item {
   font-style: italic;
@@ -82,6 +81,7 @@ table tr:nth-child(2n) {
 body {
   line-height: 1.5;
   font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 1.2rem;
   margin: 0 auto;
   max-width: 40em;
   padding-left: 50px;
@@ -117,14 +117,14 @@ h3,
 h4,
 h5,
 h6 {
-  margin-top: 1.4em;
+  margin-top: 1.4rem;
   color: salmon;
   text-transform: capitalize;
 }
 
 h5,
 h6 {
-  font-size: 1em;
+  font-size: 1rem;
   font-style: italic;
 }
 
@@ -160,10 +160,14 @@ hr {
   margin: 1em 0;
 }
 
+::marker {
+  color: salmon;
+}
+
 footer {
   display: grid;
   justify-items: center;
-  font-size: 0.7em;
+  font-size: 0.7rem;
   margin-top: 10em;
 }
 footer > * {
@@ -184,7 +188,7 @@ footer > * {
 .print,
 .share {
   text-decoration: underline;
-  color: var(--theme-color);
+  color: salmon;
 }
 .print:hover,
 .share:hover {
@@ -195,9 +199,6 @@ footer > * {
   display: none;
 }
 
-.tags-list {
-  font-size: smaller;
-}
 .tags__title {
   color: salmon;
   text-transform: capitalize;
