--- a/sass/components/_base.scss
+++ b/sass/components/_base.scss
@@ -15,10 +15,7 @@ body {
 	font-size: 1.2rem;
 	margin: 0 auto;
 	max-width: 40em;
-	padding-left: 50px;
-	padding-right: 50px;
-	padding-top: 50px;
-	padding-bottom: 50px;
+	padding: 0.5em 1em;
 	hyphens: auto;
 	word-wrap: break-word;
 	text-rendering: optimizeLegibility;
