--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -84,10 +84,7 @@ body {
   font-size: 1.2rem;
   margin: 0 auto;
   max-width: 40em;
-  padding-left: 50px;
-  padding-right: 50px;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding: 0.5em 1em;
   hyphens: auto;
   word-wrap: break-word;
   text-rendering: optimizeLegibility;
@@ -220,7 +217,12 @@ footer > * {
 }
 
 .c2 {
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
+}
+@media (min-width: 30em) {
+  .c2 {
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 .center {
