--- a/sass/utility/_grid.scss
+++ b/sass/utility/_grid.scss
@@ -1,3 +1,5 @@
+@use '../abstracts' as *;
+
 .grid {
 	display: grid;
 	grid-gap: 1em;
@@ -6,7 +8,7 @@
 .c2 {
 	grid-template-columns: 1fr;
 
-	@media (min-width: 30em) {
+	@include mq($medium) {
 		grid-template-columns: 1fr 1fr;
 	}
 }
