share menu, hide/display

--- a/src/_includes/recipe.njk
+++ b/src/_includes/recipe.njk
@@ -17,6 +17,5 @@ layout: 'base.njk'
 
 <div class="share-field">
     <a class="print" onclick="print()">PRINT</a>
-    <a class="share" onclick="navigator.share({title:'Pepperkaker', message:
-        '', url:''})">DEL</a>
+    <a class="share" onclick="navigator.share({title:'Oppskrift', message: 'Oppskrifter', url: 'mat.arnstad.xyz'})">DEL</a>
 </div>
