--- a/sass/components/_base.scss
+++ b/sass/components/_base.scss
@@ -12,7 +12,7 @@
 body {
 	line-height: 1.5;
 	font-family: $ff-body;
-	font-size: 1.2rem;
+	// font-size: 1.2rem;
 	margin: 0 auto;
 	max-width: 40em;
 	padding: 0.5em 1em;
@@ -24,7 +24,6 @@ body {
 	background-color: $bg-color-dark;
 
 	@include mq($medium) {
-		font-size: 0.9rem;
 		padding: 1em;
 	}
 }
