added atom/rss feed to footer

--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -5,11 +5,10 @@
 	<h4>Andre sider</h4>
 	<p><a href="https://arnstad.xyz">Blog</a></p>
 
-	{# <p class="rss">
+	<p class="rss">
 	<i>
-		<a href="rss.xml">rss</a>
-		<a href="atom.xml">atom</a>
+		<a href="feed.xml">atom/rss</a>
 	</i>
-	</p> #}
+	</p>
 	                                                                 	
 </footer>                                                                	
