--- a/sass/components/_base.scss
+++ b/sass/components/_base.scss
@@ -1,47 +1,47 @@
 @use '../abstracts' as *;
 
 * {
-	box-sizing: border-box;
-	margin: 0px;
+  box-sizing: border-box;
+  margin: 0px;
 }
 
 * + * {
-	margin-bottom: 1em;
+  margin-bottom: 1em;
 }
 
 body {
-	line-height: 1.5;
-	font-family: $ff-body;
-	// font-size: 1.2rem;
-	margin: 0 auto;
-	max-width: 40em;
-	padding: 0.5em 1em;
-	hyphens: auto;
-	word-wrap: break-word;
-	text-rendering: optimizeLegibility;
-	font-kerning: normal;
-	color: $text-color;
-	background-color: $bg-color-dark;
+  line-height: 1.5;
+  font-family: $ff-body;
+  // font-size: 1.2rem;
+  margin: 0 auto;
+  max-width: 40em;
+  padding: 0.5em 1em;
+  hyphens: auto;
+  word-wrap: break-word;
+  text-rendering: optimizeLegibility;
+  font-kerning: normal;
+  color: $text-color;
+  background-color: $bg-color-dark;
 
-	@include mq($medium) {
-		padding: 1em;
-	}
+  @include mq($medium) {
+    padding: 1em;
+  }
 }
 
 p {
-	margin: 1em 0;
+  margin: 1em 0;
 }
 
 a {
-	color: $text-color;
+  color: $text-color;
 
-	&:visited {
-		color: inherit;
-	}
+  &:visited {
+    color: inherit;
+  }
 }
 
 img {
-	max-width: 100%;
+  max-width: 100%;
 }
 
 h1,
@@ -50,49 +50,53 @@ h3,
 h4,
 h5,
 h6 {
-	margin-top: 1.4rem;
-	color: $theme-color;
-	text-transform: capitalize;
+  margin-top: 1.4rem;
+  color: $theme-color;
+  text-transform: capitalize;
 }
 
 h5,
 h6 {
-	font-size: 1rem;
-	font-style: italic;
+  font-size: 1rem;
+  font-style: italic;
 }
 
 h6 {
-	font-weight: normal;
+  font-weight: normal;
+}
+
+.page__title {
+  text-align: center;
 }
 
 code {
-	font-family: Menlo, Monaco, 'Lucida Console', Consolas, monospace;
-	font-size: 85%;
-	margin: 0;
+  font-family: Menlo, Monaco, 'Lucida Console', Consolas, monospace;
+  font-size: 85%;
+  margin: 0;
 }
 
 pre {
-	margin: 1em 0;
-	overflow: auto;
+  margin: 1em 0;
+  overflow: auto;
 }
 
 pre code {
-	padding: 0;
-	overflow: visible;
+  padding: 0;
+  overflow: visible;
 }
 
 .sourceCode {
-	background-color: transparent;
-	overflow: visible;
+  background-color: transparent;
+  overflow: visible;
 }
 
 hr {
-	background-color: $text-color;
-	border: none;
-	height: 1px;
-	margin: 1em 0;
+  background-color: $text-color;
+  border: none;
+  height: 1px;
+  margin: 1em 0;
 }
 
 ::marker {
-	color: $theme-color;
+  color: $theme-color;
 }
