--- a/sass/components/_table.scss
+++ b/sass/components/_table.scss
@@ -1,38 +1,39 @@
 @use '../abstracts';
 
 table {
-	margin: 1em 0;
-	border-collapse: collapse;
-	width: 100%;
-	overflow-x: auto;
-	display: table;
-	font-variant-numeric: lining-nums tabular-nums;
+  margin: 1em 0;
+  border-collapse: collapse;
+  width: 100%;
+  overflow-x: auto;
+  display: table;
+  font-variant-numeric: lining-nums tabular-nums;
 
-	@include abstracts.mq(abstracts.$medium) {
-		display: block;
-	}
+  @include abstracts.mq(abstracts.$medium) {
+    display: block;
+  }
 
-	caption {
-		margin-bottom: 0.75em;
-	}
+  caption {
+    margin-bottom: 0.75em;
+  }
 
-	tbody {
-		margin-top: 0.5em;
-		border-top: 1px solid abstracts.$text-color;
-		border-bottom: 1px solid abstracts.$text-color;
-	}
+  tbody {
+    margin-top: 0.5em;
+    border-top: 1px solid abstracts.$text-color;
+    border-bottom: 1px solid abstracts.$text-color;
+  }
 
-	th {
-		border-top: 1px solid abstracts.$text-color;
-		padding: 0.25em 0.5em 0.25em 0.7em;
-		text-align: left;
-	}
+  th {
+    border-top: 1px solid abstracts.$text-color;
+    padding: 0.25em 0.5em 0.25em 0.7em;
+    text-align: left;
+  }
 
-	td {
-		padding: 0.7em;
-	}
+  th,
+  td {
+    padding: 0.7rem 1.7rem;
+  }
 
-	tr:nth-child(2n) {
-		background-color: rgba(255, 255, 255, 0.1);
-	}
+  tr:nth-child(2n) {
+    background-color: rgba(255, 255, 255, 0.1);
+  }
 }
