oppdaterte css, farge på annenhver rad i print og fix for ingen marg mellom pkt. 1 og 2

--- a/sass/components/_print.scss
+++ b/sass/components/_print.scss
@@ -1,44 +1,54 @@
 @use '../abstracts';
 
 @media print {
-	html {
-		background-color: transparent;
-	}
-	body {
-		background-color: transparent;
-		font-size: 12pt;
-		color: abstracts.$bg-color-dark;
-	}
-	.grid {
-		display: grid;
-	}
-	.c2 {
-		grid-template-columns: 1fr 1fr;
-	}
-	p,
-	h2,
-	h3 {
-		orphans: 3;
-		widows: 3;
-	}
-	h2,
-	h3,
-	h4 {
-		page-break-after: avoid;
-	}
-	.share-field {
-		display: none;
-	}
-	.tags-list {
-		display: none;
-	}
-	tr:nth-child(2n) {
-		background-color: rgba(0, 0, 0, 0.1);
-	}
-	footer {
-		display: none;
-	}
-	header {
-		display: none;
-	}
+  html {
+    background-color: transparent;
+  }
+
+  body {
+    background-color: transparent;
+    font-size: 10pt;
+    color: abstracts.$bg-color-dark;
+  }
+
+  .grid {
+    display: grid;
+  }
+
+  .c2 {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  p,
+  h2,
+  h3 {
+    orphans: 3;
+    widows: 3;
+  }
+
+  h2,
+  h3,
+  h4 {
+    page-break-after: avoid;
+  }
+
+  .share-field {
+    display: none;
+  }
+
+  .tags-list {
+    display: none;
+  }
+
+  table tr:nth-child(2n) {
+    background-color: hsla(0 0% 0% / 0.1);
+  }
+
+  footer {
+    display: none;
+  }
+
+  header {
+    display: none;
+  }
 }
