added service worker with workbox

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -16,5 +16,11 @@
     
 {% include 'footer.njk' %}
 
+<script>
+    if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('/sw.js')
+    }
+</script>
+
 </body>
 </html>
