--- a/src/rss/feed.njk
+++ b/src/rss/feed.njk
@@ -1,6 +1,6 @@
 ---json
 {
- "permalink": "feed.xml",
+ "permalink": "feed.atom",
  "eleventyExcludeFromCollection": true,
  "metadata" : {
   "title" : "Oppskriftsboka",
