--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -7,7 +7,7 @@
 
 	<p class="rss">
 	<i>
-		<a target="_blank" href="/feed.atom">atom/rss feed</a>
+		<a href="/feed.atom">atom/rss feed</a>
 	</i>
 	</p>
 	                                                                 	
