--- a/src/rss/feed.njk
+++ b/src/rss/feed.njk
@@ -6,7 +6,7 @@
   "title" : "Oppskriftsboka",
   "subtitle" : "Samling med oppskrifter til både middag, dessers og snacks",
   "url" : "https://mat.arnsatd.xyz",
-  "feedUrl" : "https://mat.arnstad.xyz/feed.xml",
+  "feedUrl" : "https://mat.arnstad.xyz/feed.atom",
   "author" : {
    "name" : "Fredrik Arnstad",
    "email" : "fredrik.arnstad@icloud.com"
