corrected typo in rssfeed

--- a/src/rss/feed.njk
+++ b/src/rss/feed.njk
@@ -5,7 +5,7 @@
  "metadata" : {
   "title" : "Oppskriftsboka",
   "subtitle" : "Samling med oppskrifter til både middag, dessers og snacks",
-  "url" : "https://mat.arnsatd.xyz",
+  "url" : "https://mat.arnstad.xyz",
   "feedUrl" : "https://mat.arnstad.xyz/feed.atom",
   "author" : {
    "name" : "Fredrik Arnstad",
