--- a/src/rss/feed.njk
+++ b/src/rss/feed.njk
@@ -6,7 +6,7 @@
   "title" : "Oppskriftsboka",
   "subtitle" : "Samling med oppskrifter til både middag, dessers og snacks",
   "url" : "https://mat.arnstad.xyz/",
-  "feedUrl" : "https://mat.arnstad.xyz/feed.xml",
+  "feedUrl" : "https://mat.arnstad.xyz/rss.xml",
   "author" : {
    "name" : "Fredrik Arnstad",
    "email" : "fredrik.arnstad@icloud.com"
@@ -17,7 +17,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <rss version="2.0" xmlns:atom="http://www.w3.org/2005/Atom">
 
-<feed xmlns="http://www.w3.org/2005/Atom">
+<channel xmlns="http://www.w3.org/2005/Atom">
   <title>{{ metadata.title }}</title>
   <subtitle>{{ metadata.subtitle }}</subtitle>
   <language>no-nb</language>
@@ -40,4 +40,4 @@
     <content type="html">{{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }}</content>
   </entry>
   {%- endfor %}
-</feed>
+</channel>
