--- a/src/rss/feed.njk
+++ b/src/rss/feed.njk
@@ -17,7 +17,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <rss version="2.0" xmlns:atom="http://www.w3.org/2005/Atom">
 
-<channel xmlns="http://www.w3.org/2005/Atom">
+<channel>
   <title>{{ metadata.title }}</title>
   <subtitle>{{ metadata.subtitle }}</subtitle>
   <language>no-nb</language>
