--- a/src/rss/feed.njk
+++ b/src/rss/feed.njk
@@ -17,7 +17,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <rss version="2.0" xmlns:atom="http://www.w3.org/2005/Atom">
 
-<channel>
+<feed>
   <title>{{ metadata.title }}</title>
   <subtitle>{{ metadata.subtitle }}</subtitle>
   <language>no-nb</language>
@@ -40,4 +40,4 @@
     <content type="html">{{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }}</content>
   </entry>
   {%- endfor %}
-</channel>
+</feed>
